test/compilable/extra-files/test6461/a.d
module a;
import tmpl;
TypeInfo fun() { return typeid(Tmpl!int()); }

