test/fail_compilation/fail10.d
template Foo(alias b){
    int a() {
       return b;
    }
 }

 void test(){
    mixin Foo!(y) y;
 }

